# pc1600-to-json

./: .pre-commit-config.yaml  README.md  from_json.py  main.py  pyproject.toml  query.py  requirements.txt  to_json.py
pc1600/: __init__.py  data.py  patch.py  record.py  utils.py
tests/: test_regressions.py
tests/regressions/: init_1CC.syx  init_1CC_CV1_cc.syx  init_1CC_CV1_master.syx  init_1btn_mute.syx  init_1btn_note_onoff.syx  init_1btn_note_send_fader.syx  init_1btn_note_send_scene.syx  init_1btn_note_string.syx  init_1btn_note_string_prsrls.syx  init_1btn_note_string_toggle.syx  init_1btn_prgchg.syx  init_1btn_solo.syx  init_1btn_string_seq.syx  init_1btn_string_seq_-gc.syx  init_1btn_string_seq_dv.syx  init_1btn_string_seq_rv.syx  init_1btn_string_seq_rv_long.syx  init_btn_str_toggle_named.syx  init_button_note_on_off.syx  init_button_prgm_chg.syx  init_button_prs_rls.syx  init_button_solo.syx  init_button_string.syx  init_setup_123.syx  init_setup_3ch.syx  init_setup_5ch.syx  init_setup_5ch_scene96.syx  init_setup_5ch_wmax_scene96.syx  init_setup_scene1.syx  init_setup_scene1_sysex.syx  init_setup_scene94.syx  init_string_2byte_bcdnibs_hilo.syx  init_string_2byte_bcdnibs_lohi.syx  init_string_2byte_hilo.syx  init_string_2byte_lohi.syx  init_string_2byte_nibs_hilo.syx  init_string_2byte_nibs_lohi.syx  init_string_3byte_hilo.syx  init_string_3byte_lohi.syx  init_string_3byte_nibs_hilo.syx  (+37 more)
